- replace deprecated code